Removed quite some warnings