@@ -24,13 +24,13 @@ public final class MissionParameters {
             return (T) "";
         }
         if (param.placeholder().type().equals(Integer.class)) {
-            return (T) new Integer(0);
+            return (T) Integer.valueOf(0);
         }
         if (param.placeholder().type().equals(Double.class)) {
-            return (T) new Double(0.0);
+            return (T) Double.valueOf(0.0);
         }
         if (param.placeholder().type().equals(Boolean.class)) {
-            return (T) new Boolean(false);
+            return (T) Boolean.FALSE;
         }
         return null;
     }
